# comfyui-nix

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  claude.yml  docker.yml  flakehub-publish-tagged.yml
docs/: git-history.json  graph-data.json  pr-comfyui-0.25.0.md  pulid-setup.md
nix/: apps.nix  checks.nix  custom-nodes.nix  docker.nix  packages.nix  python-overrides.nix  template-inputs.nix  vendored-packages.nix  versions.nix
nix/lib/: custom-nodes.nix
nix/modules/: comfyui.nix
nix/patches/: comfyui-disable-api-canary.patch  comfyui-ltxvideo-compat.patch  comfyui-mps-fp8-dequant.patch
scripts/: config.sh  download-pulid-models.sh  install.sh  launcher.sh  logger.sh  persistence.sh  push-to-cachix.sh  runtime.sh  template_inputs.sh  update-template-inputs.sh
src/custom_nodes/: main.py
src/custom_nodes/model_downloader/: .disabled  __init__.py  model_downloader_patch.py  test_model_downloader.py
src/custom_nodes/model_downloader/js/: backend_download.js  model_downloader_core.js
src/patches/: custom_node_init.py  main.py
src/persistence/: __init__.py  main.py  persistence.py
